syntax = "proto3";
package api ;

option go_package = "grpc/gen" ;

service Axone {
    rpc SendNewTicket(NewTicketRequest) returns (NewTicketResponse);
    rpc SendAttachment(stream AttachmentRequest) returns (AttachmentResponse);

    rpc ListAgentTickets(AgentTicketsListRequest) returns (AgentTicketsListResponse);

    rpc Subscribe(NotificationRequest) returns (stream NotificationResponse);
    rpc Unsubscribe(NotificationRequest) returns (NotificationResponse);

    rpc Login(LoginRequest) returns (LoginResponse);
}

message AttachmentRequest {
    oneof data {
        AttachmentInfo info = 1;
        bytes chunk_data = 2;
      };
}

message AttachmentResponse {
    string ticketID = 1;
    uint32 size = 2;
  }
  

message AttachmentInfo{
	string uploadedName = 1;
	uint32 size          = 2;
	string mimeType     = 3;
	//string storageName  = 4;
	string ticketID     = 5;
}

message NewTicketRequest {
    string ticketID  = 1;
    string subject     = 2;
    string request  = 3;
    string type      = 4;
    string requesterID = 5;
}

message NewTicketResponse {
    string ID = 1;
}

message Ticket {
    string subject           = 1;      
	string request           = 2;      
	string answer            = 3;      
	string requesterID       = 4;
    string requesterEmail    = 5;
    string requesterFullName = 6;
	string status            = 7;   
	string type              = 8;    
	string priority          = 9;
	uint32 rate              = 10;        
}

message AgentTicketsListRequest {
    string status       = 1;   
	string type         = 2;    

} 

message AgentTicketsListResponse {
    repeated Ticket tickets = 1; 
}

message NotificationRequest {
    string id = 1;
}

message NotificationResponse {
    string message = 1;
    int64 time     = 2;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string authToken = 1;
    string roleToken = 2;
}